<resources>
    <string name="app_name">Learnify</string>
    <string name="app_logo_description">Application Logo</string>
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button_text">LOGIN</string>
    <string name="signup_prompt">Don\'t have an account?</string>
    <string name="signup_link_text">Sign Up</string>

    <string name="register_title">Sign up!</string>
    <string name="register_subtitle">Create account by filling the form below</string>
    <string name="profile_image_description">User Profile Picture</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_phone">Enter phone number</string>
    <string name="hint_dob">Enter D.O.B (YYYY-MM-DD)</string>
    <string name="create_account_button">Create Account</string>
    <string name="login_prompt">Do you already have an account?</string>
    <string name="login_link_text">LOGIN</string>

    <string name="premium">Premium</string>
    <string name="learnify_title">LEARNIFY</string>
    <string name="explore">EXPLORE</string>
    <string name="community">COMMUNITY</string>
    <string name="saved">SAVED</string>
    <string name="create">CREATE</string>

    <string name="title_explore">Explore</string>
    <string name="title_community">Community</string>
    <string name="title_settings">Settings</string>

    <string name="cd_learnify_logo">Learnify Logo</string>
    <string name="cd_explore_icon">Explore Icon</string>
    <string name="cd_community_icon">Community Icon</string>
    <string name="cd_saved_icon">Saved Items Icon</string>
    <string name="cd_create_icon">Create Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>